# ImgProc

./: .gitignore  README.md
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  code  code.cpp
tut/core/blendingImgs/: Makefile  learning.md  linblend  linearblend.cpp
tut/core/dft/: .CMakeLists.txt.swp  Makefile  dft  dft.cpp  learning.md
tut/core/fileio/: Makefile  another.bat  demo.xml  fileio  fileio.cpp  learning.md
tut/core/imgOps/: learning.md
tut/core/ltrans/: Makefile  learning.md  ltrans  ltrans.cpp
tut/core/mask/: Makefile  contrast  contrast.cpp
tut/core/mat/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  learning.md  learning.txt  matrix
tut/core/parallel/: Makefile  learning.md  para.cpp
tut/core/scanLookupTime/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  code  code.cpp  learning.md  learning.txt
tut/imgproc/: learning.md
tut/imgproc/affineTrans/: code  code.cpp  learning.md
tut/imgproc/basicDrawing/: Makefile  code  code.cpp  learning.md
tut/imgproc/blurFiltering/: Makefile  code  code.cpp  learning.md
tut/imgproc/borders/: code  code.cpp  learning.md
tut/imgproc/canny/: code  code.cpp  learning.md
tut/imgproc/changingSizes/: Makefile  code  code.cpp  learning.md
tut/imgproc/circleDetection/: code  code.cpp  learning.md
tut/imgproc/contours/: code  code.cpp  learning.md
tut/imgproc/convexHull/: code  code.cpp
tut/useBasic/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cpimg  cpimg.cpp  dispimg  dispimg.cpp  learning.md  learning.txt
(+59 files in other folders)
